tests/baselines/reference/duplicateObjectLiteralProperty.errors.txt
==== tests/cases/compiler/duplicateObjectLiteralProperty.ts (5 errors) ====
    var x = {
        a: 1,
        b: true, // OK
        a: 56,   // Duplicate
        ~~~~~
!!! duplicateObjectLiteralProperty.ts(4,5): error TS2000: Duplicate identifier 'a'.
        \u0061: "ss", // Duplicate
        ~~~~~~~~~~~~
!!! duplicateObjectLiteralProperty.ts(5,5): error TS2000: Duplicate identifier '\u0061'.
        a: {
        ~~~~
            c: 1,
    ~~~~~~~~~~~~~
            "c": 56, // Duplicate
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~
!!! duplicateObjectLiteralProperty.ts(8,9): error TS2000: Duplicate identifier '"c"'.
        }
    ~~~~~
!!! duplicateObjectLiteralProperty.ts(6,5): error TS2000: Duplicate identifier 'a'.
    };
    
    
    var y = {
        get a() { return 0; },
        set a(v: number) { },
        get a() { return 0; }
        ~~~~~~~~~~~~~~~~~~~~~
!!! duplicateObjectLiteralProperty.ts(16,5): error TS2015: Getter 'a' already declared.
    };
    